Finished JavaInterviewReview.md, added a few missing pieces to Java.java.